[package]
name = "pklformation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
aws-config = "1.1.5"
aws-sdk-cloudformation = "1.15.0"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
spinners = "4.1.1"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
